# captchan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
generator/: bulk.cc  bulk_light.cc  generator.cc  generator.h  images.cc  progress.h  test.cc  test_light.cc  test_vec.cc
integration/: detector.cc  learner.cc  net_configuration.h
tf/: conv_essentials.py  learner.py  learner_light.py  learner_reader.py  load_values.py  mnist.py  mnist_reader.py  model_220x60.py  model_224x224.py  model_60x60.py  qrunner.py  qrunner_reader.py  test.py
